--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <nav>
             <ul class="nav-menu">
                 <li class="nav-items"><a href="#">Home</a></li>
-                <li class="nav-items"><a href="#">About</a></li>
-                <li class="nav-items"><a href="#">Skills</a></li>
-                <li class="nav-items"><a href="#">Portfolio</a></li>
-                <li class="nav-items"><a href="#">Contact</a></li>
+                <li class="nav-items"><a href="#about">About</a></li>
+                <li class="nav-items"><a href="#skills">Skills</a></li>
+                <li class="nav-items"><a href="#portfolio">Portfolio</a></li>
+                <li class="nav-items"><a href="#contacts">Contact</a></li>
             </ul>
         </nav>
         <div class="mobile-btn">
@@ -72,7 +72,7 @@
             <h2 class="section-title">
                 Skills
             </h2>
-            <div class="row">
+            <div class="row justify-content-center">
                 <div class="col-lg-4  col-md-12 col-sm-12 col-xs-12">
                     <div class="box">
                         <img src="images/Profile%20Picture.png" alt="">
@@ -190,7 +190,7 @@
                 Get in Touch
             </h2>
             <div class="row">
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
                         <ul>
                             <li><a href="#">Dribbble</a></li>
                             <li><a href="#">Behance</a></li>
@@ -200,7 +200,7 @@
                             <li><a href="#"></a></li>
                         </ul>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
                     <ul>
                         <li><a href="#">LinkedIn</a></li>
                         <li><a href="#">Facebook</a></li>
@@ -208,7 +208,7 @@
                         <li><a href="#">Twitter</a></li>
                     </ul>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
                     <ul>
                         <li><a href="#">seyrig@mail.com</a></li>
                         <li><a class="last" href="#">+55 6645 665544</a></li>
