--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <nav>
             <ul class="nav-menu">
-                <li class="nav-items"><a href="#">Home</a></li>
+                <li class="nav-items"><a href="#home">Home</a></li>
                 <li class="nav-items"><a href="#about">About</a></li>
                 <li class="nav-items"><a href="#skills">Skills</a></li>
                 <li class="nav-items"><a href="#portfolio">Portfolio</a></li>
